--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" href="./src/github-mark.png">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <title>Github</title>
 </head>
+
 <body>
   <div class="container-fluid">
     <header>
@@ -21,26 +24,31 @@
       </div>
     </header>
     <main>
-      <div class="container-area row g-0 p-10 "> 
-        <div class="sidebar col-sm-2 col-md-3 col-lg-3 col-xl-3 p-0 d-flex align-items-center justify-content-center">
+      <div class="container-area row g-0 p-10 ">
+        <div class="sidebar d-none d-md-flex col-md-3 col-lg-3 col-xl-3 p-0 d-flex align-items-center justify-content-center">
           <div class="sidebar-content row g-0 "></div>
         </div>
-        <div class="content-area  col-sm-10 col-md-9 col-lg-9 col-xl-9 g-0 p-0  justify-content-center d-md-block ">
-          <div class="search-bar-container row align-items-center justify-content-center" >
+        <div class="content-area  col-sm-10 col-md-9 col-lg-9 col-xl-9 g-0 p-0  ">
+          <div class="row justify-content-center d-md-block">
+            <div class="search-bar-container row-cols d-flex justify-content-center">
               <div class="search-bar col-10 col-sm-10 col-md-7">Search</div>
-          </div>
-          <div class="content-cards-list row justify-content-evenly">
-            <div class="col-12 col-md-3 content-card"></div>
-            <div class="col-12 col-md-3 content-card"></div>
-            <div class="col-12 col-md-3 content-card"></div>
-          </div>
-          <div class="row-cols-12">
-            <div class="content-bottom"></div>
+            </div>
+            <div class="content-cards-list row justify-content-evenly ">
+                <div class="col-12 col-md-3 content-card"></div>
+                <div class="col-12 col-md-3 content-card"></div>
+                <div class="col-12 col-md-3 content-card"></div>
+             </div>
+            <div class="row justify-content-center">
+              <div class="content-bottom"></div>
+            </div>
           </div>
         </div>
       </div>
     </main>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
