--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="content-area  col-sm-10 col-md-9 col-lg-9 col-xl-9 g-0 p-0  ">
           <div class="row justify-content-center d-md-block">
             <div class="search-bar-container row-cols d-flex justify-content-center">
-              <div class="search-bar col-10 col-sm-10 col-md-7">Search</div>
+              <div class="search-bar col-10 col-sm-10 col-md-7"><h3>Search</h3></div>
             </div>
             <div class="content-cards-list row justify-content-evenly ">
                 <div class="col-12 col-md-3 content-card"></div>
